--- a/experimental/higepon/scheme/src/Makefile.am
+++ b/experimental/higepon/scheme/src/Makefile.am
@@ -43,21 +43,21 @@ Pair.h\
 Parser.cpp\
 Parser.h\
 PrimitiveProcedure.h\
-PrimitiveProcedures/CharcterProcedures.cpp\
-PrimitiveProcedures/EqualProcedures.cpp\
-PrimitiveProcedures/False.cpp\
-PrimitiveProcedures/False.h\
-PrimitiveProcedures/IOProcedures.cpp\
-PrimitiveProcedures/NumberProcedures.cpp\
-PrimitiveProcedures/PairProcedures.cpp\
-PrimitiveProcedures/Procedure.h\
-PrimitiveProcedures/Set.cpp\
-PrimitiveProcedures/Set.h\
-PrimitiveProcedures/StringProcedures.cpp\
-PrimitiveProcedures/SymbolProcedures.cpp\
-PrimitiveProcedures/True.cpp\
-PrimitiveProcedures/True.h\
-PrimitiveProcedures/VectorProcedures.cpp\
+procedures/CharcterProcedures.cpp\
+procedures/EqualProcedures.cpp\
+procedures/False.cpp\
+procedures/False.h\
+procedures/IOProcedures.cpp\
+procedures/NumberProcedures.cpp\
+procedures/PairProcedures.cpp\
+procedures/Procedure.h\
+procedures/Set.cpp\
+procedures/Set.h\
+procedures/StringProcedures.cpp\
+procedures/SymbolProcedures.cpp\
+procedures/True.cpp\
+procedures/True.h\
+procedures/VectorProcedures.cpp\
 Procedure.cpp\
 Procedure.h\
 Quote.cpp\
