--- a/experimental/higepon/scheme/test_cpp/Makefile.am
+++ b/experimental/higepon/scheme/test_cpp/Makefile.am
@@ -76,18 +76,18 @@ QuoteFilterTest.cpp\
 ../src/Application.cpp\
 ../src/Application.h\
 ../src/PrimitiveProcedure.h\
-../src/PrimitiveProcedures/Set.cpp\
-../src/PrimitiveProcedures/Set.h\
-../src/PrimitiveProcedures/True.h\
-../src/PrimitiveProcedures/True.cpp\
-../src/PrimitiveProcedures/False.h\
-../src/PrimitiveProcedures/False.cpp\
-../src/PrimitiveProcedures/CharcterProcedures.cpp\
-../src/PrimitiveProcedures/VectorProcedures.cpp\
-../src/PrimitiveProcedures/NumberProcedures.cpp\
-../src/PrimitiveProcedures/StringProcedures.cpp\
-../src/PrimitiveProcedures/SymbolProcedures.cpp\
-../src/PrimitiveProcedures/PairProcedures.cpp\
-../src/PrimitiveProcedures/IOProcedures.cpp\
-../src/PrimitiveProcedures/EqualProcedures.cpp
+../src/procedures/Set.cpp\
+../src/procedures/Set.h\
+../src/procedures/True.h\
+../src/procedures/True.cpp\
+../src/procedures/False.h\
+../src/procedures/False.cpp\
+../src/procedures/CharcterProcedures.cpp\
+../src/procedures/VectorProcedures.cpp\
+../src/procedures/NumberProcedures.cpp\
+../src/procedures/StringProcedures.cpp\
+../src/procedures/SymbolProcedures.cpp\
+../src/procedures/PairProcedures.cpp\
+../src/procedures/IOProcedures.cpp\
+../src/procedures/EqualProcedures.cpp
 
