--- a/experimental/higepon/scheme-cont-jmp/Makefile
+++ b/experimental/higepon/scheme-cont-jmp/Makefile
@@ -10,7 +10,6 @@ Cond.cpp\
 Definition.cpp\
 Environment.cpp\
 Error.cpp\
-Eval.cpp\
 Frame.cpp\
 Lambda.cpp\
 Let.cpp\
@@ -33,6 +32,7 @@ procedures/StringProcedures.cpp\
 procedures/SymbolProcedures.cpp\
 procedures/True.cpp\
 procedures/VectorProcedures.cpp\
+procedures/MiscProcedures.cpp\
 Procedure.cpp\
 Quote.cpp\
 QuoteFilter.cpp\
@@ -53,20 +53,29 @@ test_cpp/MacroMatchTest.cpp\
 test_cpp/MacroFilterTest.cpp\
 test_cpp/QuoteFilterTest.cpp
 
-#CXXFLAGS = -g -idirafter . -O0 -gstabs+ -Wall
-CXXFLAGS = -g -gstabs -idirafter . -Wall -O0
+LIBCONT_SOURCES = \
+libcont/cont.c\
+libcont/mysetjmp.c
+
+CXXFLAGS = -g -idirafter . -Wall -O0
+CFLAGS   = $(CXXFLAGS)
 # -fno-exceptions -fno-rtti -I /usr/local/include/gc -DGC_OPERATOR_NEW_ARRAY# -DUSE_BOEHM_GC
 
 OBJECTS = $(SOURCES:.cpp=.o)
 TEST_OBJECTS = $(TEST_SOURCES:.cpp=.o)
+LIBCONT_OBJECTS = $(LIBCONT_SOURCES:.c=.o) libcont/mysetjmp_asm.o
 
 all : $(TARGET) $(TEST_TARGET)
 
-$(TARGET): main.o $(OBJECTS)
-	$(CXX) main.o $(OBJECTS) -o $(TARGET)
+$(TARGET): main.o $(OBJECTS) $(LIBCONT_OBJECTS)
+	echo $(LIBCONT_OBJECTS)
+	$(CXX) main.o $(OBJECTS) $(LIBCONT_OBJECTS) -o $(TARGET)
 
-$(TEST_TARGET): test_cpp/main.o $(OBJECTS) $(TEST_OBJECTS)
-	$(CXX) -lcppunit -ldl test_cpp/main.o $(OBJECTS) $(TEST_OBJECTS) -o $(TEST_TARGET)
+$(TEST_TARGET): test_cpp/main.o $(OBJECTS) $(LIBCONT_OBJECTS) $(TEST_OBJECTS)
+	$(CXX) -lcppunit -ldl test_cpp/main.o $(OBJECTS) $(LIBCONT_OBJECTS) $(TEST_OBJECTS) -o $(TEST_TARGET)
+
+libcont/mysetjmp_asm.o: libcont/mysetjmp.asm
+	nasm $< -o $@ -felf -g -F stabs
 
 check : $(TEST_TARGET) $(TARGET)
 	$(TEST_TARGET)
@@ -85,11 +94,15 @@ test_cpp/main.o: test_cpp/main.cpp
 .cpp.o:
 	$(CXX) $(CXXFLAGS) $(INCLUDE) -c $< -o $@
 
+.SUFFIXES: .c .o
+.c.o:
+	$(CC) $(CFLAGS) $(INCLUDE) -c $< -o $@
+
 depend:
 	$(CXX) -MM $(INCLUDE) $(CXXFLAGS) $(SOURCES) > dependencies
 	$(CXX) -MM $(INCLUDE) $(CXXFLAGS) $(TEST_SOURCES) >> dependencies
 
 clean :
-	rm -f $(OBJECTS) $(TARGET) main.o $(TEST_OBJECTS) $(TEST_TARGET)
+	rm -f $(OBJECTS) $(TARGET) main.o $(TEST_OBJECTS) $(LIBCONT_OBJECTS) $(TEST_TARGET)
 
 -include dependencies
