--- a/experimental/higepon/scheme-cont-jmp/Makefile
+++ b/experimental/higepon/scheme-cont-jmp/Makefile
@@ -23,6 +23,7 @@ Object.cpp\
 Pair.cpp\
 OutputPort.cpp\
 InputPort.cpp\
+Values.cpp\
 Parser.cpp\
 procedures/CharcterProcedures.cpp\
 procedures/EqualProcedures.cpp\
@@ -61,7 +62,7 @@ LIBCONT_SOURCES = \
 libcont/cont.c\
 libcont/mysetjmp.c
 
-CXXFLAGS = -pg -idirafter . -Wall -O0 -DMONASH_DONT_FREE_MEMORY
+CXXFLAGS = -pg -idirafter . -Wall -O0 -DMONASH_DONT_FREE_MEMORY #-I /usr/local/include/gc -DGC_OPERATOR_NEW_ARRAY -DUSE_BOEHM_GC -DGC_NOT_DLL
 CFLAGS   = $(CXXFLAGS)
 # -fno-exceptions -fno-rtti -I /usr/local/include/gc -DGC_OPERATOR_NEW_ARRAY# -DUSE_BOEHM_GC
 
@@ -73,10 +74,10 @@ all : $(TARGET) $(TEST_TARGET)
 
 $(TARGET): main.o $(OBJECTS) $(LIBCONT_OBJECTS)
 	echo $(LIBCONT_OBJECTS)
-	$(CXX) -pg main.o $(OBJECTS) $(LIBCONT_OBJECTS) -o $(TARGET)
+	$(CXX) -pg -lgc main.o $(OBJECTS) $(LIBCONT_OBJECTS) -o $(TARGET)
 
 $(TEST_TARGET): test_cpp/main.o $(OBJECTS) $(LIBCONT_OBJECTS) $(TEST_OBJECTS)
-	$(CXX) -lcppunit -ldl test_cpp/main.o $(OBJECTS) $(LIBCONT_OBJECTS) $(TEST_OBJECTS) -o $(TEST_TARGET)
+	$(CXX) -lcppunit -ldl -lgc test_cpp/main.o $(OBJECTS) $(LIBCONT_OBJECTS) $(TEST_OBJECTS) -o $(TEST_TARGET)
 
 libcont/mysetjmp_asm.o: libcont/mysetjmp.asm
 	nasm $< -o $@ -felf -g -F stabs
