--- a/experimental/higepon/scheme-cont-jmp/Makefile
+++ b/experimental/higepon/scheme-cont-jmp/Makefile
@@ -62,7 +62,7 @@ LIBCONT_SOURCES = \
 libcont/cont.c\
 libcont/mysetjmp.c
 
-CXXFLAGS = -pg -idirafter . -Wall -O0 -DMONASH_DONT_FREE_MEMORY #-I /usr/local/include/gc -DGC_OPERATOR_NEW_ARRAY -DUSE_BOEHM_GC -DGC_NOT_DLL
+CXXFLAGS = -g -idirafter . -Wall -O0 -DMONASH_DONT_FREE_MEMORY -I /usr/local/include/gc -DUSE_BOEHM_GC -DGC_OPERATOR_NEW_ARRAY -DGC_NOT_DLL #	--DGC_DEBUG 
 CFLAGS   = $(CXXFLAGS)
 # -fno-exceptions -fno-rtti -I /usr/local/include/gc -DGC_OPERATOR_NEW_ARRAY# -DUSE_BOEHM_GC
 
@@ -97,7 +97,7 @@ test_cpp/main.o: test_cpp/main.cpp
 
 .SUFFIXES: .cpp .o
 .cpp.o:
-	$(CXX) $(CXXFLAGS) $(INCLUDE) -c $< -o $@
+	$(CXX) -g $(CXXFLAGS) $(INCLUDE) -c $< -o $@
 
 .SUFFIXES: .c .o
 .c.o:
