--- a/experimental/higepon/scheme-cont-jmp/gc/Makefile
+++ b/experimental/higepon/scheme-cont-jmp/gc/Makefile
@@ -1,27 +1,59 @@
 GC_STACK_TEST01 = ./gc_stack_test_01
-GC_STACK_TEST01_OBJECTS = $(GC_OBJECTS) $(GC_STACK_TEST01).o
+GC_STACK_TEST02  = ./gc_stack_test_02
+GC_STACK_TEST03  = ./gc_stack_test_03
+GC_GLOBAL_TEST01 = ./gc_global_test_01
+GC_GLOBAL_TEST02 = ./gc_global_test_02
+GC_HEAP_TEST01   = ./gc_heap_test_01
 
-CXXFLAGS = -pg -g -idirafter . -Wall $(GC_FLAGS) -DGC_TEST #-O3 # O2じゃないと gc 
+
+GC_TESTS = $(GC_STACK_TEST01) $(GC_STACK_TEST02) $(GC_STACK_TEST03) $(GC_GLOBAL_TEST01) $(GC_GLOBAL_TEST02) $(GC_HEAP_TEST01)
+GC_STACK_TEST01_OBJECTS  = $(GC_OBJECTS) $(GC_STACK_TEST01).o
+GC_STACK_TEST02_OBJECTS  = $(GC_OBJECTS) $(GC_STACK_TEST02).o
+GC_STACK_TEST03_OBJECTS  = $(GC_OBJECTS) $(GC_STACK_TEST03).o
+GC_GLOBAL_TEST01_OBJECTS = $(GC_OBJECTS) $(GC_GLOBAL_TEST01).o
+GC_GLOBAL_TEST02_OBJECTS = $(GC_OBJECTS) $(GC_GLOBAL_TEST02).o
+GC_HEAP_TEST01_OBJECTS   = $(GC_OBJECTS) $(GC_HEAP_TEST01).o
+
+
+CXXFLAGS = -pg -g -idirafter . -Wall $(GC_FLAGS) -DGC_TEST #-DGC_TRACE #-O3 # O2じゃないと gc 
 
 GC_SOURCES = GCNode.cpp gc.cpp
 GC_OBJECTS = $(GC_SOURCES:.cpp=.o)
 
-all : $(GC_STACK_TEST01)
+GC_TEST_OBJECTS = $(GC_TESTS:=.o)
+GC_TEST_SOURCES = $(GC_TESTS:=.cpp)
+
+all : $(GC_TESTS)
 
 $(GC_STACK_TEST01): $(GC_STACK_TEST01_OBJECTS)
 	$(CXX) -pg  $(GC_STACK_TEST01_OBJECTS) -o $@
+
+$(GC_STACK_TEST02): $(GC_STACK_TEST02_OBJECTS)
+	$(CXX) -pg  $(GC_STACK_TEST02_OBJECTS) -o $@
+
+$(GC_STACK_TEST03): $(GC_STACK_TEST03_OBJECTS)
+	$(CXX) -pg  $(GC_STACK_TEST03_OBJECTS) -o $@
+
+$(GC_GLOBAL_TEST01): $(GC_GLOBAL_TEST01_OBJECTS)
+	$(CXX) -pg $(GC_GLOBAL_TEST01_OBJECTS) -o $@
+
+$(GC_GLOBAL_TEST02): $(GC_GLOBAL_TEST02_OBJECTS)
+	$(CXX) -pg $(GC_GLOBAL_TEST02_OBJECTS) -o $@
+
+$(GC_HEAP_TEST01): $(GC_HEAP_TEST01_OBJECTS)
+	$(CXX) -pg $(GC_HEAP_TEST01_OBJECTS) -o $@
 
 .SUFFIXES: .cpp .o
 .cpp.o:
 	$(CXX) -g $(CXXFLAGS) $(INCLUDE) -c $< -o $@
 
 depend:
-	$(CXX) -MM $(INCLUDE) $(CXXFLAGS) $(GC_SOURCES) $(GC_STACK_TEST01).cpp > dependencies
+	$(CXX) -MM $(INCLUDE) $(CXXFLAGS) $(GC_SOURCES) $(GC_TEST_SOURCES) > dependencies
 
 clean :
-	rm -f $(GC_OBJECTS) $(GC_STACK_TEST01).o $(GC_STACK_TEST01)
+	rm -f $(GC_OBJECTS) $(GC_TEST_OBJECTS) $(GC_TESTS)
 
-check : $(GC_STACK_TEST01)
-	@$(GC_STACK_TEST01)
+check : $(GC_TESTS)
+	@ruby -e '"$(GC_TESTS)".split.each{ |s| puts `#{s}`}'
 
 -include dependencies
